Adds robot movement functions

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -7,5 +7,7 @@
 
     <Button text="^" (tap)="moveFwd()"></Button>
     <Button text="v" (tap)="moveBck()"></Button>
+    <Button text="<" (tap)="turnLeft()"></Button>
+    <Button text=">" (tap)="turnRight()"></Button>
   </StackLayout>
 </ScrollView>
