Robot can now flash colours on it's chest

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -9,5 +9,7 @@
     <Button text="v" (tap)="moveBck()"></Button>
     <Button text="<" (tap)="turnLeft()"></Button>
     <Button text=">" (tap)="turnRight()"></Button>
+
+    <Button text="flash" (tap)="flash()"></Button>
   </StackLayout>
 </ScrollView>
