--- a/app/app.component.html
+++ b/app/app.component.html
@@ -11,5 +11,7 @@
     <Button text=">" (tap)="turnRight()"></Button>
 
     <Button text="flash" (tap)="flash()"></Button>
+    <Button text="distance" (tap)="getDistance()"></Button>
+    <Button text="shout" (tap)="shout()"></Button>
   </StackLayout>
 </ScrollView>
